# rc

./: .gitignore  Makefile  README  bashrc  git_completion  gitconfig  hgrc  profile  screenrc  vimrc  xmodmap  xscreensaver  xsession  zshrc
ez-xmonad/: install.sh  xsession
ez-xmonad/xmonad/: xmonad.hs
ez-xmonad/xmonad/bar/: DzenParse.hs  Icon.hs  Makefile  Top.hs  Utils.hs  bar.hs  calendar  dzen.sh  dzen2  nullshell.py  tray.sh  xmonad.hs  xsession.sh
oh-my-zsh/plugins/git/: git.plugin.zsh
oh-my-zsh/themes/: agnoster.zsh-theme
sublime-text-3/: .gitignore
sublime-text-3/Installed Packages/: 0_package_control_loader.sublime-package  Boxy Theme.sublime-package  C++ Starting Kit.sublime-package  Clang Format.sublime-package  Colorsublime.sublime-package  Copy Relative Path.sublime-package  DiffView.sublime-package  GN.sublime-package  Jinja2.sublime-package  LSP.sublime-package  Less Tabs.sublime-package  Oasis Theme.sublime-package  Package Control.sublime-package  PackageResourceViewer.sublime-package  SelectUntil.sublime-package  SideBarEnhancements.sublime-package  Switch File Deluxe.sublime-package  Text Pastry.sublime-package  Theme - Soda.sublime-package  TidyTabs.sublime-package
vim/colors/: corporation.vim  jellybeans2.vim
xmonad/: bar  xmonad.errors  xmonad.hi  xmonad.hs  xmonad.state
xmonad/bar/: bar.hs  powertop.sh
xmonad/newbar/bar/: README.md  bar.cabal
xmonad/newbar/bar-0.1.0.0/: LICENSE
xmonad/newbar/bar-0.1.0.0/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
xmonad/newbar/bar-0.1.0.0/dist-newstyle/sdist/bar-0.1.0.0/: ChangeLog.md
xmonad/newbar/bar-0.1.0.0/src/: Icon.hs  Icon.hs.orig  Main.hs  Main.hs.orig  Main.hs.rej  Top.hs  Utils.hs
xmonad/newbar/bar/.git2/: config  index  packed-refs
xmonad/newbar/bar/.git2/logs/: HEAD
xmonad/newbar/bar/.git2/objects/pack/: pack-b4006cb08b8265964c3d2eb7e74161e2c914c4ee.idx  pack-b4006cb08b8265964c3d2eb7e74161e2c914c4ee.pack
xmonad/newbar/bar/.git2/refs/heads/: master
xmonad/newbar/bar/src/: Main.hs  Timer.hs
xmonad/newbar2/bar/: bar.cabal
xmonad/newbar2/bar/.git2/: FETCH_HEAD  ORIG_HEAD  index  packed-refs
xmonad/newbar2/bar/.git2/logs/: HEAD
xmonad/newbar2/bar/.git2/logs/refs/heads/: master
xmonad/newbar2/bar/.git2/logs/refs/remotes/origin/: HEAD  home  master
xmonad/newbar2/bar/.git2/objects/pack/: pack-7431fa2b0eb582e6aff2977073f7d2910a8808a0.idx  pack-7431fa2b0eb582e6aff2977073f7d2910a8808a0.pack
xmonad/newbar2/bar/.git2/refs/heads/: master
xmonad/newbar2/bar/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
xmonad/newbar2/bar/extra/: bar.sh  clock.sh  top.sh  xmonad.hs
xmonad/newbar2/bar/src/: DzenParse.hs  Icon.hs  Main.hs  Timer.hs  Utils.hs
xmonad/oldbar/: .gitignore  clock.sh
xmonad/oldbar/icons/: default.xpm
