cabal-version:      >=1.10
name:               bar
version:            0.1.0.0
license:            BSD3
license-file:       LICENSE
maintainer:         Ivan.Volosyuk@gmail.com
author:             Ivan Volosyuk
homepage:           https://github.com/ivanvolosyuk/bar
synopsis:           IceWM like bar for XMonad
description:
    IcwWM like bar for XMonad with build in support for
    some system graphs like CPU top, memory usage, network
    and battery.  For configuration options change Main.hs

category:           System
build-type:         Simple
extra-source-files: ChangeLog.md

executable bar
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:
        DzenParse
        Icon
        Timer
        Top
        Utils

    default-language: Haskell2010
    other-extensions: Arrows DeriveGeneric DeriveAnyClass LambdaCase
    ghc-options:
        -fexcess-precision -rtsopts -threaded
        -O2 -funfolding-use-threshold=16 -optc-O3
-- -O0 -g


    build-depends:
        base >=4.9,
        containers >=0.5,
        X11 >=1.8,
        bytestring >=0.10,
        unix >=2.3,
        ghc-heap,
        time >=1.6,
        deepseq >=1.4,
        monad-loops,
        parsec >=3.1,
        directory >=1.3,
        X11-xft >=0.3,
        process >=1.4,
        tz >=0.1.3
